syntax = "proto3";

package com.lodny.rwcommon.grpc;

option java_multiple_files = true;
option java_package = "com.lodny.rwcommon.grpc.profile";

service Profile {
  rpc getProfileByUserId (GrpcProfileByUserIdRequest) returns (GrpcProfileResponse);
  rpc getProfileByUsername (GrpcProfileByUsernameRequest) returns (GrpcProfileResponse);
}


message GrpcProfileByUserIdRequest {
  uint64 userId = 1;
  uint64 followerId = 2;
}

message GrpcProfileResponse {
  string username = 1;
  string bio = 2;
  string image = 3;
  bool following = 4;
}


message GrpcProfileByUsernameRequest {
  string username = 1;
  uint64 followerId = 2;
}
